--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Versus Revise - Absolute Auditor (Initial Position Fix)</title>
+    <title>Versus Revise - Absolute Auditor (Final Physical Fix)</title>
     <style>
-        /* index.html のUI/CSSを完全継承 */
+        /* 提供された index.html のUI/CSSを100%継承 */
         :root { --c-bg: #000; --c-text: #eee; --c-accent: #ffd700; --c-border: #333; }
         * { box-sizing: border-box; user-select: none; -webkit-user-select: none; -webkit-tap-highlight-color: transparent; }
         html, body { width: 100%; height: 100%; min-height: 100dvh; margin: 0; padding: 0; background: var(--c-bg); color: var(--c-text); font-family: -apple-system, BlinkMacSystemFont, "Hiragino Kaku Gothic ProN", "Yu Gothic", sans-serif; overflow: hidden; display: flex; flex-direction: column; touch-action: manipulation; overscroll-behavior: none; -webkit-text-size-adjust: 100%; }
@@ -108,8 +108,8 @@ function build() {
     }
 }
 const app = {
-    // ★指定された初期配置を正確にセット
-    state: { reel: 'left', flagMode: 'bonus_unestablished', stopNum: 12, positions: { left: 12, middle: 14, right: 2 } },
+    // ★物理座標オフセットに基づき、枠内に14,13,12、16,15,14、4,3,2を表示
+    state: { reel: 'left', flagMode: 'bonus_unestablished', stopNum: 13, positions: { left: 13, middle: 15, right: 3 } },
     init() { build(); this.render(); this.attach(); this.update(); },
     render() {
         const win = document.getElementById('reel-strip'); win.innerHTML = '';
@@ -135,7 +135,7 @@ const app = {
                 }
             });
         }
-        const y = -(21*60) - ((21-this.state.stopNum)*60) + 240; // index.html描画ロジック準拠
+        const y = -(21*60) - ((21-this.state.stopNum)*60) + 240; // index.html描画基準
         document.getElementById('reel-strip').style.transform = `translate3d(0, ${y}px, 0)`;
     },
     setStop(r) { this.state.reel = r; this.state.stopNum = this.state.positions[r]; document.querySelectorAll('.stop-tab').forEach(el => el.classList.toggle('active', el.id === `t-${r}`)); this.render(); this.update(); },
