--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@ const FLAG_INFO = [
     { k: "bell_b", n: "ベルＢ", c: "bell" },
     { k: "sui_a", n: "氷Ａ", c: "suika" },
     { k: "sui_b", n: "氷Ｂ", c: "suika" },
-    { k: "cher_a1", n: "チェＡ1", c: "cher" },
-    { k: "cher_a2", n: "チェＡ2", c: "cher" },
-    { k: "cher_b", n: "チェＢ", c: "cher" },
-    { k: "tok_a", n: "特役Ａ", c: "tok" },
-    { k: "tok_b", n: "特役Ｂ", c: "tok" },
-    { k: "tok_c", n: "特役Ｃ", c: "tok" },
-    { k: "tok_d", n: "特役Ｄ", c: "tok" },
-    { k: "tok_e", n: "特役Ｅ", c: "tok" }
+    { k: "cher_a1", n: "チェリーＡ1", c: "cher" },
+    { k: "cher_a2", n: "チェリーＡ2", c: "cher" },
+    { k: "cher_b", n: "チェリーＢ", c: "cher" },
+    { k: "tok_a", n: "特殊役Ａ", c: "tok" },
+    { k: "tok_b", n: "特殊役Ｂ", c: "tok" },
+    { k: "tok_c", n: "特殊役Ｃ", c: "tok" },
+    { k: "tok_d", n: "特殊役Ｄ", c: "tok" },
+    { k: "tok_e", n: "特殊役Ｅ", c: "tok" }
 ];
 
 const REEL_SYMBOLS = {
