--- a/output.html
+++ b/output.html
@@ -73,15 +73,16 @@
                 <th>設定</th>
                 <th class="c-purple">特殊役Ａ</th>
                 <th class="c-purple">特殊役Ｃ</th>
+                <th class="c-yellow">風鈴Ｂ</th>
                 <th class="c-purple">特殊役Ｅ</th>
-                <th colspan="2" class="c-blue">合算</th>
+                <th class="c-blue">合算</th>
             </tr>
         </thead>
         <tbody>
-            <tr><td>1</td><td>1/4096</td><td>1/3277</td><td>1/3855</td><td colspan="2" class="c-blue">1/512.0</td></tr>
-            <tr><td>2</td><td>1/3855</td><td>1/3121</td><td>1/3641</td><td colspan="2" class="c-blue">1/489.1</td></tr>
-            <tr><td>5</td><td>1/3855</td><td>1/2979</td><td>1/3641</td><td colspan="2" class="c-blue">1/471.5</td></tr>
-            <tr><td>6</td><td>1/3641</td><td>1/2979</td><td>1/3449</td><td colspan="2" class="c-blue">1/455.1</td></tr>
+            <tr><td>1</td><td>1/4096</td><td>1/3277</td><td>1/16384</td><td>1/3855</td><td class="c-blue">1/555.4</td></tr>
+            <tr><td>2</td><td>1/3855</td><td>1/3121</td><td>1/16384</td><td>1/3641</td><td class="c-blue">1/537.2</td></tr>
+            <tr><td>5</td><td>1/3855</td><td>1/2979</td><td>1/13107</td><td>1/3641</td><td class="c-blue">1/512.0</td></tr>
+            <tr><td>6</td><td>1/3641</td><td>1/2979</td><td>1/13107</td><td>1/3449</td><td class="c-blue">1/496.5</td></tr>
         </tbody>
     </table>
     <div class="spec-container">
@@ -93,19 +94,36 @@
 <div class="frame-top">
     <div class="flag-title title-sevenbig">７ビッグボーナス詳細</div>
     <table class="summary-table-2tier">
-        <thead><tr><th>設定</th><th class="c-red">単独</th><th class="c-sky">ＪＡＣリプ</th><th class="c-sky">ＲＴリプ</th><th class="c-red">チェA1</th><th class="c-red">チェＢ</th></tr></thead>
+        <thead>
+            <tr>
+                <th>設定</th>
+                <th class="c-red">単独</th>
+                <th class="c-sky">ＪＡＣリプ</th>
+                <th class="c-sky">ＲＴリプ</th>
+                <th class="c-red">チェリーＡ</th>
+                <th class="c-red">チェリーＢ</th>
+            </tr>
+        </thead>
         <tbody>
-            <tr><td>1</td><td class="c-red">1/3449</td><td class="c-sky">1/8192</td><td class="c-sky">1/5958</td><td class="c-red">1/16384</td><td class="c-red">1/5958</td></tr>
-            <tr><td>2</td><td class="c-red">1/3277</td><td class="c-sky">1/8192</td><td class="c-sky">1/5958</td><td class="c-red">1/16384</td><td class="c-red">1/5958</td></tr>
-            <tr><td>5</td><td class="c-red">1/3277</td><td class="c-sky">1/8192</td><td class="c-sky">1/5461</td><td class="c-red">1/16384</td><td class="c-red">1/5461</td></tr>
-            <tr><td>6</td><td class="c-red">1/3121</td><td class="c-sky">1/7282</td><td class="c-sky">1/5461</td><td class="c-red">1/13107</td><td class="c-red">1/5461</td></tr>
+            <tr><td>1</td><td>1/3449</td><td>1/8192</td><td>1/5958</td><td>1/16384</td><td>1/5958</td></tr>
+            <tr><td>2</td><td>1/3277</td><td>1/8192</td><td>1/5958</td><td>1/16384</td><td>1/5958</td></tr>
+            <tr><td>5</td><td>1/3277</td><td>1/8192</td><td>1/5461</td><td>1/16384</td><td>1/5461</td></tr>
+            <tr><td>6</td><td>1/3121</td><td>1/7282</td><td>1/5461</td><td>1/13107</td><td>1/5461</td></tr>
         </tbody>
-        <thead><tr class="tier-header"><th>設定</th><th class="c-purple">特殊役A</th><th class="c-purple">特殊役B</th><th class="c-purple">特殊役C</th><th colspan="2" class="c-red">合算</th></tr></thead>
+        <thead>
+            <tr class="tier-header">
+                <th>設定</th>
+                <th class="c-purple">特殊役Ａ</th>
+                <th class="c-purple">特殊役Ｂ</th>
+                <th class="c-purple">特殊役Ｃ</th>
+                <th colspan="2" class="c-red">合算</th>
+            </tr>
+        </thead>
         <tbody>
-            <tr><td>1</td><td class="c-purple">1/8192</td><td class="c-purple">1/5958</td><td class="c-purple">1/1638</td><td colspan="2" class="c-red">1/585</td></tr>
-            <tr><td>2</td><td class="c-purple">1/8192</td><td class="c-purple">1/5958</td><td class="c-purple">1/1560</td><td colspan="2" class="c-red">1/570</td></tr>
-            <tr><td>5</td><td class="c-purple">1/8192</td><td class="c-purple">1/1524</td><td class="c-purple">1/1524</td><td colspan="2" class="c-red">1/551</td></tr>
-            <tr><td>6</td><td class="c-purple">1/7282</td><td class="c-purple">1/1490</td><td class="c-purple">1/1490</td><td colspan="2" class="c-red">1/529</td></tr>
+            <tr><td>1</td><td>1/8192</td><td>1/5958</td><td>1/1638</td><td colspan="2" class="c-red">1/585.1</td></tr>
+            <tr><td>2</td><td>1/8192</td><td>1/5958</td><td>1/1560</td><td colspan="2" class="c-red">1/570.2</td></tr>
+            <tr><td>5</td><td>1/8192</td><td>1/1524</td><td>1/1524</td><td colspan="2" class="c-red">1/551.4</td></tr>
+            <tr><td>6</td><td>1/7282</td><td>1/1490</td><td>1/1490</td><td colspan="2" class="c-red">1/529.5</td></tr>
         </tbody>
     </table>
     <div class="spec-container">
@@ -148,11 +166,6 @@
                 <th>対応役</th>
                 <th class="c-white">消灯ナシ</th>
                 <th class="c-white">3消灯</th>
-            </tr>
-            <tr>
-                <th style="font-size: 9px;">合算 9.9%</th>
-                <th class="c-purple">1.2%</th>
-                <th class="c-purple">8.7%</th>
             </tr>
         </thead>
         <tbody>
